<resources>
    <string name="app_name">Birthday Wishes</string>
    <string name="happy_birthday_jyoti">Happy Birthday, Jyoti !</string>
    <string name="from_ankit">From Ankit</string>
    <string name="todo">todo</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="logout">LogOut</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="next_page">Next Page</string>
    <string name="todoagain">TODO</string>
    <string name="home">HOME</string>
    <string name="todoagain2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="widgets">Widgets</string>
    <string name="person">Person</string>
    <string name="todo5">TODO</string>
</resources>